# SQLWork

./: .cvsignore  AUTHORS  BUGS  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.cache  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  mkinstalldirs  sqlwork.glade  sqlwork.spec  sw50_gtkeditor.patch
CVS/: Entries  Repository
applet/: applet.c  build_applet  smiley.xpm  sqlwork_applet.desktop  sqlwork_applet.gnorba  swpa.xpm
applet/CVS/: Entries  Repository
autom4te.cache/: output.1  requests  traces.0  traces.1
gtkeditor/: Makefile  Makefile.in  SYNTAX_HIGHLIGHT_HOWTO  buildscanner  edit.c  edit.h  gtkeditor.c  gtkeditor.h  highlight.c  highlight.h  internal.h  orasoft_gtkeditor.c  plsql.c  plsql.flex  plsql.l  plsql.s  scanner.c  scanner.h  scannertool
gtkeditor/CVS/: Entries  Repository
intl/: Makefile
intl/CVS/: Entries  Repository
ocitrace/: Makefile  ocitrace.c  sqlplus  trace-sqlplus
ocitrace/CVS/: Entries  Repository
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  sqlwork.pot
po/CVS/: Entries  Repository  Root
src/: Makefile  Makefile.am  Makefile.in  README.md  bookmarksig.c  bookmarksig.h  common.h  confirm.c  dbif.c  dbif.h  dblist.c  errors.c  export.c  export.h  main.c  miscfunc.c  miscfunc.h  mysqldb.c  oracle.h  oracledb.c  oscan.c  oscan.l  prefs.c  prefs.h  sqlwork  sqlworksig.c  sqlworksig.h  sqlworkwin-glade.c.bak  sqlworkwin-glade.h.bak  sqlworkwin.c  sqlworkwin.h  support.c  version.c  vmsgfmt.c
src/.deps/: bookmarksig.P  bookmarksig.Po  confirm.P  confirm.Po  dbif.P  dbif.Po  dblist.P  dblist.Po  errors.P  errors.Po  errors.Tpo  export.P  export.Po  main.P  main.Po  miscfunc.P  miscfunc.Po  mysqldb.P  oscan.P  oscan.Po  prefs.P  prefs.Po  sqlworksig.P  sqlworksig.Po  sqlworkwin.P  sqlworkwin.Po  support.P  support.Po  vmsgfmt.P  vmsgfmt.Po
src/CVS/: Entries  Repository
xpm/: bmfolder.xpm  bmfolder_open.xpm  bookmark.xpm  disconnect.xpm  gnome-apply.xpm  gnome-cancel.xpm  gnome-ok.xpm  gnome-question.xpm  login.xpm  logintop.xpm  logintopleft.xpm  logintopmid.xpm  logintopright.xpm  orasoft_banner.xpm  printer.xpm  procedit.xpm  quit-mini.xpm  quit.xpm  rebuild.xpm  session.xpm  sqlwork.xpm  stop.xpm  submit-mini.xpm  table.xpm  users.xpm
xpm/CVS/: Entries  Repository
